--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
+    "serve": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
+    "lint": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service lint"
+},
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "node-sass": "^5.0.0",
+    "sass": "^1.69.5",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1"
   },
